<resources>
    <string name="app_name">cracklepop</string>
    <string name="ticker_text">Snapclient started</string>
    <string name="notification_title">Snapclient</string>
    <string name="notification_text">Snapclient is running…</string>
    <string name="notification_info">info…</string>
    <string name="stop">stop</string>
    <string name="menu_details">Details</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_group">Group</string>

    <string name="title_activity_snapcast">cracklepop</string>

    <string name="action_about">About…</string>
    <string name="action_settings">Settings…</string>
    <string name="action_scan">Scan for server</string>
    <string name="action_refresh">Refresh client list</string>
    <string name="action_hide_offline">Hide offline clients</string>
    <string name="action_bar_failed">Cannot set ActionBar!</string>

    <string name="title_activity_client_settings">Client settings</string>
    <string name="client_name">Name</string>
    <string name="client_mac">MAC</string>
    <string name="client_id">ID</string>
    <string name="client_ip">IP</string>
    <string name="client_host">Host</string>
    <string name="client_os">Operating system</string>
    <string name="client_version">Version</string>
    <string name="client_last_seen">Last seen</string>
    <string name="client_latency">Latency</string>
    <string name="online">online</string>

    <string name="title_activity_group_preference">Group settings</string>

    <string name="host_empty">Cannot connect: host is not configured</string>
    <string name="action_play_stop">Play/Stop</string>
    <string name="client_deleted">Client %1$s deleted</string>
    <string name="wrong_sample_rate">Stream not in native sample rate: %1$d\nNative sample rate: %2$d</string>
    <string name="unknown_sample_rate">Streams in non-native sample rate might not play in sync</string>
    <string name="undo_string">undo</string>
    <string name="title_activity_about">About</string>
    <string name="about_file">files/about.html</string>
    <string name="about">About</string>

    <string name="client_stream">Stream</string>
    <string name="host">Host</string>
    <string name="streaming_port">stream port</string>
    <string name="control_port">control port</string>
    <string name="settings">Settings</string>
    <string name="audio_engine">audio engine</string>
    <string name="resample_audio">resample audio stream</string>
    <string name="auto_start">Auto start Snapclient</string>
    <string name="connect">Connect</string>
    <string name="tv_this_device">This Shield</string>
    <string name="tv_status_unconfigured">No Snapserver configured</string>
    <string name="tv_status_unavailable">Snapserver unavailable</string>
    <string name="tv_status_stopped">Ready to listen</string>
    <string name="tv_status_connecting">Connecting this Shield…</string>
    <string name="tv_status_running">Receiving audio</string>
    <string name="tv_configure_server">Configure server</string>
    <string name="tv_retry_connection">Retry connection</string>
    <string name="tv_start_listening">Start listening</string>
    <string name="tv_stop_listening">Stop listening</string>
    <string name="tv_mute">Mute</string>
    <string name="tv_unmute">Unmute</string>
    <string name="tv_volume">Volume</string>
    <string name="tv_manage_server">Manage server…</string>
    <string name="tv_group">Group: %1$s</string>
    <string name="tv_stream">Stream: %1$s</string>
    <string name="tv_unassigned">Unassigned</string>
</resources>
